fix: prevent layout shift from error message in connection creation (#18462)

--- a/airbyte-webapp/src/components/connection/CreateConnectionForm/SimplifiedConnectionCreation/SimplifiedConnectionConfiguration.module.scss
+++ b/airbyte-webapp/src/components/connection/CreateConnectionForm/SimplifiedConnectionCreation/SimplifiedConnectionConfiguration.module.scss
@@ -21,6 +21,7 @@
 }
 
 .fixedBottomNav {
+  padding: variables.$spacing-lg variables.$spacing-xl variables.$spacing-xl;
   background-color: colors.$foreground;
   border-top: variables.$border-thin solid colors.$grey-100;
 }
